<resources>
    <string name="app_name">Github Clone</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="alert">Alert!</string>
    <string name="open_settings">Open Settings</string>
    <string name="no_internet">No internet!</string>
    <string name="turn_on_internet">Turn on your internet connection.</string>

    <string name="d_open">open</string>
    <string name="d_close">close</string>

    <string name="no_response_host">No response from KinYards. Try again after sometime or call to KinYards customer service.</string>
    <string name="unknown_error">Unknown error. Try again!.</string>
    <string name="unauthorized_error">Unauthorized error!.</string>
    <string name="request_rejected">Request rejected!.</string>
    <string name="json_convert_error">Json convert error!.</string>
    <string name="time_out_error">Connection timeout due to slow internet connection. Please try again.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="repo_details">Repository Details</string>
    <string name="owner_name">Owner Name</string>
    <string name="company_name">Company Name</string>
    <string name="repository_name">Repository Name</string>
    <string name="repository_description">Repository Description</string>
    <string name="no_repository_found">No repository found.</string>
    <string name="loading_data_plz_wait">Loading data. Please wait…</string>
    <string name="watchers_count">watchers count</string>
    <string name="_0">0</string>
    <string name="fork_count">Fork Count</string>
    <string name="filter">Filter</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="most_stars">Most Stars</string>
    <string name="least_recent_update">Least Recent Update</string>
    <string name="recent_update">Recent Update</string>
    <string name="fewest_forks">Fewest Forks</string>
    <string name="most_forks">Most Forks</string>
    <string name="fewest_star">Fewest Star</string>
    <string name="updated_on">\"Updated on \"</string>

</resources>