<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/vRoot"
        style="@style/ll_main_match_match_vertical"
        tools:context=".RepoDetailsFragment">

        <androidx.core.widget.NestedScrollView style="@style/nestedScrollView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="7dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/civProfile"
                        android:layout_width="70dp"
                        android:layout_height="70dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvOwnerName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="2"
                            android:padding="5dp"
                            android:text="@string/owner_name"
                            android:textColor="@color/cBlack"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tvOwnerDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="2"
                            android:paddingLeft="5dp"
                            android:text="@string/company_name"
                            android:textColor="@color/cBlack"
                            android:textSize="14sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/watchers_count"
                        android:src="@drawable/ic_star" />

                    <TextView
                        android:id="@+id/tvStarCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="5dp"
                        android:paddingEnd="0dp"
                        android:text="@string/_0"
                        android:textColor="@color/cBlack"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="15dp"
                        android:contentDescription="@string/fork_count"
                        android:src="@drawable/ic_route_fork" />

                    <TextView
                        android:id="@+id/tvForkCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="5dp"
                        android:paddingEnd="0dp"
                        android:text="@string/_0"
                        android:textColor="@color/cBlack"
                        android:textSize="14sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tvLastUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:paddingStart="5dp"
                    android:paddingEnd="0dp"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvRepoName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:paddingStart="5dp"
                    android:paddingEnd="0dp"
                    android:text="@string/repository_name"
                    android:textColor="@color/cBlue"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:paddingStart="5dp"
                    android:paddingEnd="0dp"
                    android:text="@string/repository_description"
                    android:textSize="12sp" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</layout>