<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00000000"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="8dp"
        android:minWidth="200dp"
        app:cardCornerRadius="3dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="7dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civProfile"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvOwnerName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:padding="5dp"
                        android:text="@string/owner_name"
                        android:textColor="@color/cBlack"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvOwnerDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/company_name"
                        android:textColor="@color/cBlack"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tvRepoName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:paddingBottom="3dp"
                android:text="@string/repository_name"
                android:textColor="@color/cBlue"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvLastUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:paddingBottom="3dp"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:contentDescription="@string/watchers_count"
                    android:src="@drawable/ic_star" />

                <TextView
                    android:id="@+id/tvStarCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="3dp"
                    android:paddingEnd="0dp"
                    android:text="@string/_0"
                    android:textColor="@color/cBlack"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="15dp"
                    android:contentDescription="@string/fork_count"
                    android:src="@drawable/ic_route_fork" />

                <TextView
                    android:id="@+id/tvForkCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="3dp"
                    android:paddingEnd="0dp"
                    android:text="@string/_0"
                    android:textColor="@color/cBlack"
                    android:textSize="12sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:text="@string/repository_description"
                android:textSize="12sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>